# mpc

./: .gitignore  .gitmodules  README.md
mpc_base/: CMakeLists.txt  package.xml
mpc_base/include/mpc_base/: configuration_mpc.h  controller_base.h  interface_base.h  module_handler_base.h  reconfigure_callback_base.h  solver_base.h
mpc_core/: CMakeLists.txt  package.xml
mpc_core/include/mpc_core/: controller.h  interface.h  reconfigure_callback.h
mpc_core/src/: controller.cpp  interface.cpp
mpc_core/src/functions/: error_function.cpp  update_mpc_configuration.cpp
mpc_modules/: CMakeLists.txt  package.xml
mpc_modules/src/constraints/: static_polyhedron_constraints.cpp
mpc_modules/src/loader/: module_handler.cpp
mpc_modules/src/objectives/: goal_oriented.cpp  reference_trajectory.cpp
mpc_msgs/: CMakeLists.txt  package.xml
mpc_solver/: CMakeLists.txt  package.xml  setup_script.sh
mpc_solver/scripts/include/: control_modules.py  dynamics.py  helpers.py  inequality.py  objective.py  setup_script.py  systems.py
mpc_solver/src/core/: helper_functions.cpp
mpc_systems/: system.cmake
mpc_systems/mpc_hovergames/: CMakeLists.txt  package.xml
mpc_systems/mpc_hovergames/config/: common.yaml  px4_hmpc.yaml  px4_smpc.yaml  (+2 more)
mpc_tools/: CMakeLists.txt  package.xml
mpc_tools/profiling/: README.md  concatenate_profiling.sh
mpc_tools/recorded_data/: README.md
mpc_tools/src/: RK4.cpp  ROS_timer_handler.cpp  ThreadPool.cpp  benchmarker.cpp  data_saver_json.cpp  eigen_to_std.cpp  instrumentation_timer.cpp  robot_region.cpp  ros_visuals.cpp
(+44 files in other folders)
