<?xml version="1.0"?>
<package format="2">
  <name>mpc_base</name>
  <version>0.0.1</version>
  <description>The mpc_base package</description>

  <maintainer email="d.benders@tudelft.nl">Dennis Benders</maintainer>
  <author>Dennis Benders</author>
  <author>Thijs Niesten</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>mpc_msgs</depend>

  <export>
  </export>
</package>
