<?xml version="1.0"?>
<package format="2">
  <name>mpc_msgs</name>
  <version>0.0.1</version>
  <description>The mpc_msgs package</description>

  <maintainer email="d.benders@tudelft.nl">Dennis Benders</maintainer>
  <author>Dennis Benders</author>
  <author>Thijs Niesten</author>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
